# t8-client

./: .gitignore  README.md  create_spectrum.py  main.py  pyproject.toml
data/: spectrum_decode.py  timestamp.py  wave_data.csv  waveform_decode.py
output/reports/: spectrum_LP_Turbine_MAD31CY005_AM1_2019-04-11T18-25-54.csv  spectrum_LP_Turbine_MAD31CY005_AM1_2019-04-12T20-27-24.csv  waveform_LP_Turbine_MAD31CY005_AM1_2019-04-11T18-25-54.csv  waveform_LP_Turbine_MAD31CY005_AM1_2019-04-12T20-27-24.csv
spectra_comparator/: common.py  compare_spectra.py  spectrum.py  waveform.py
spectrum_generator/: spectrum.py  waveform.py
src/spectra_comparison/: compare_spectra.py
src/t8_client/: cli.py  compare_spectra.py  functions.py  main.py  spectrum.py  waveform.py
src/t8_spectrum/: functions.py  main.py  spectrum.py  waveform.py
tests/: test_functions.py  test_waveform.py
utils/: spectrum.py  waveform.py
