[tool.poetry]
name = "t8-client"
version = "0.1.0"
description = "T8 client"
authors = ["Julia <julianunezc@gmail.com>"]
readme = "README.md"
packages = [
    {include = "t8_client", from = "src"},
    {include = "spectra_comparison", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
requests = "^2.32.3"
numpy = "^2.2.3"
scipy = "^1.15.2"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pytest = "^8.3.5"

[tool.ruff]
line-length = 88
lint.select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear - common bugs and anti-patterns
    "C90", # McCabe complexity
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "NPY", # flake8-numpy
    "PL",  # pylint
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RUF", # ruff-specific, import optimization and other inefficiencies
    "SIM", # flake8-simplify
    "UP",  # pyupgradej
    "W",   # pycodestyle
    "ANN", # flake8-annotations - Consistent type annotations
]

[tool.poetry.scripts]
t8-client = "t8_client.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
